snapclient (0.11.0~beta-1) unstable; urgency=low

  * Features
  * Bugfixes
  * General

 -- Johannes Pohl <johannes.pohl@badaix.de>  Sun, 26 Feb 2017 00:13:37 +0200

snapclient (0.10.0) unstable; urgency=low

  * Features
    -Added support "process" streams: 
     Snapserver starts a process and reads PCM data from stdout 
    -Specialized versions for Spotify "spotify" and AirPlay "airplay"
  * Bugfixes
    -Fixed crash during server shutdown
    -Fixed Makefile for FreeBSD
    -Fixed building of dpk (unsigned .changes file)
  * General
    -Speed up client and server shutdown

 -- Johannes Pohl <johannes.pohl@badaix.de>  Wed, 16 Nov 2016 00:13:37 +0200

snapclient (0.9.0) unstable; urgency=low

  * Features
    -Added (experimental) support for macOS (make TARGET=MACOS)
  * Bugfixes
    -Android client: Fixed crash on Nougat (Issue #97)
    -Fixed FreeBSD compile error for Snapserver (Issue #107)
    -Snapserver randomly dropped JSON control messages
    -Long command line options (like --sampleformat) 
     didn't work on some systems (Issue #103) 
  * General
    -Updated Android NDK to revision 13 

 -- Johannes Pohl <johannes.pohl@badaix.de>  Sat, 22 Oct 2016 00:13:37 +0200

snapclient (0.8.0) unstable; urgency=low

  * Features
    -Added support for FreeBSD (Issue #67)
    -Android client: Added Japanese and German translation
    -Android client: Added support for ogg (Issue #83)
  * Bugfixes
    -OpenWRT: makefile automatically sets correct endian (Issue #91)

 -- Johannes Pohl <johannes.pohl@badaix.de>  Sun, 24 Jul 2016 00:13:37 +0200

snapclient (0.7.0) unstable; urgency=low

  * Features
    -Support for HiRes audio (e.g. 96000:24:2) (Issue #13)
     Bitdepth must be one of 8, 16, 24 (=24 bit padded to 32) or 32 
    -Auto start option for Android (Issue #49)
    -creation mode for the fifo can be configured (Issue #52)
     "-s pipe:///tmp/snapfifo?mode=[read|create]" 
  * Bugfixes
    -Server was sometimes crashing during shutdown